# fortuno-docs

./: CMakeLists.txt  README.rst
docs/: about.rst  conf.py  howtos.rst  index.rst  requirements.txt  tutorials.rst  understanding.rst
docs/howtos/: case-fixtures.rst  suite-fixtures.rst
docs/howtos/case-fixtures.data/: random_file.f90  testapp.casefixture.f90  testapp.manual.f90
docs/howtos/suite-fixtures.data/: testapp.suite.f90  testapp.suiteglobal.f90
docs/quickstart/: index.rst  mylib.f90  testapp.f90  testapp.out
docs/tutorials/: index.rst  quickstart-cmake.rst  quickstart-fpm.rst  quickstart-meson.rst  quickstart.rst
docs/tutorials/quickstart.data/: CMakeLists.txt  CMakeLists.txt.tutorial  fortuno.wrap  main.f90  meson.build  testapp.cmake.out  testapp.f90  testapp.meson.out  testapp.out
docs/understanding/: key-concepts.rst
